feat: offers + reference
https://github.com/barthofu/glowjob/issues/14
https://github.com/barthofu/glowjob/issues/12
